x/programs/rust/sdk-macros/tests/ui/no-param.rs
use sdk_macros::public;

#[public]
pub fn test() {}

fn main() {}
